--- a/src/scss/partials/_mediaPlayerModals.scss
+++ b/src/scss/partials/_mediaPlayerModals.scss
@@ -232,7 +232,8 @@
     padding: 0 1rem;
 
     .support-modal__group {
-      margin-bottom: 0.5rem;
+      margin: $border-focus-margin 0;
+      padding: 0.25rem 0;
 
       &:last-child {
         margin-bottom: 0;
